# BitnunEco

./: .env.example  .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  package-lock.json  package.json  replit.md  tailwind.config.ts  vercel.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml  npm-gulp.yml
.local/state/replit/agent/design_reference/9c412331-b654-4a9f-80b0-e721de4ad03f/: 2f245755-ca1b-4667-b53b-a12a7a8147c8.html
client/: index.html  tsconfig.json
client/src/: App.tsx  index.css
client/src/components/action-mining/: mining-counter.tsx
client/src/components/blockchain/: blockchain-dashboard.tsx
client/src/components/layout/: footer.tsx  navbar.tsx
client/src/components/ui/: sidebar.tsx
client/src/hooks/: use-action-mining.tsx
client/src/lib/: blockchain.ts  mock-data.ts  smart-contracts.ts
client/src/pages/: dashboard.tsx  developer.tsx  faq.tsx  gamification.tsx  home.tsx  nft-marketplace.tsx  roadmap.tsx  wallet.tsx
server/: index.ts  routes.ts  storage.ts  vite.config.ts  vite.ts
server/api/: index.js
shared/: schema.ts
src/: lib.rs
src/ai/: fraud_detector.rs  mod.rs  reward_optimizer.rs
src/blockchain/: block.rs  merkle.rs  mod.rs  transaction.rs
src/consensus/: mod.rs  proof_of_action.rs  validator.rs
src/contracts/: btn_token.rs  mod.rs  nft_contract.rs  staking.rs
src/network/: mod.rs
